syntax = "proto3";

package users;

option go_package = "github.com/moiz-r/ridehailing-system/common/users";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
}

message CreateUserRequest {
  string name = 1;
}

message CreateUserResponse {
  string user_id = 1;
}

message DeleteUserRequest {
  string user_id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}

message GetUserRequest {
  string user_id = 1;
}

message GetUserResponse {
  string user_id = 1;
  string name = 2;
}

// protoc --proto_path=./ \
//        --go_out=paths=source_relative:./ \
//        --go-grpc_out=paths=source_relative:./ \
//        ./user_service.proto